--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -89,6 +89,10 @@
                 <li class="nav-item">
                 <a target="_blank"  class="nav-link" href="https://twitter.com/trololodemulher"><i class="fab fa-twitter"></i></a>
                 </li>
+
+	        <li class="nav-item">
+                <a target="_blank"  class="nav-link" href="https://plus.google.com/+LidianeVasconcelosTMDC"><i class="fab fa-google"></i></a>
+                </li>
                 
             </ul>		
   
