--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+<html lang="pt-br">	
 <head>
 <meta charset="utf-8">
+<meta http-equiv="Content-Language" content="pt-br">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    
+
+{% include analytics.html %}      
+
 <link rel="icon" href="{{ site.baseurl }}/assets/images/logo.png">
     
 <title>{{ page.title }} | {{site.name}}</title>
@@ -22,17 +26,6 @@
     
 </head>
     
-{% if jekyll.environment == 'production' %}
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-  ga('create', '{{site.google_analytics}}', 'auto');
-  ga('send', 'pageview');
-</script>
-{% endif %}
     
 {% capture layout %}{% if page.layout %}layout-{{ page.layout }}{% endif %}{% endcapture %}
 <body class="{{ layout }}">
