--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
-<html lang="pt-br">	
+<html lang="{{ site.content_lang }}">
 <head>
 <meta charset="utf-8">
-<meta http-equiv="Content-Language" content="pt-br">
+<meta http-equiv="Content-Language" content="{{ site.content_lang }}">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
 {% include analytics.html %}      
@@ -59,7 +58,7 @@
                 {% else %}
                 <li class="nav-item">
                 {% endif %}
-                <a class="nav-link" href="{{ site.baseurl }}/index.html">Blog</a>
+                <a class="nav-link" href="{{ site.baseurl }}/index.html">Início</a>
                 </li>
                 
                 {% if page.url == "/about.html" %}
