--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -71,7 +71,7 @@
                 
                 
                 <li class="nav-item">
-                <a target="_blank" class="nav-link" href="{{ site.baseurl }}/ProjetoLarBonitoLar"><i class="fab fa-wordpress-simple"></i>Projeto Lar Bonito Lar</a>
+                <a target="_blank" class="nav-link" href="{{ site.baseurl }}/_pages/ProjetoLarBonitoLar"><i class="fab fa-wordpress-simple"></i>Projeto Lar Bonito Lar</a>
                 </li>
 
                 <li class="nav-item">
