--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,6 +29,7 @@
 {% capture layout %}{% if page.layout %}layout-{{ page.layout }}{% endif %}{% endcapture %}
 <body class="{{ layout }}">
 
+	{% include nav.html %}
     
 <!-- Begin Menu Navigation
 ================================================== -->
