--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -28,7 +28,16 @@
                 {% endif %}
                 <a class="nav-link" href="{{ site.baseurl }}/index.html">Início</a>
                 </li>
-                
+
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Post</a>
+                    <div class="dropdown-menu" aria-labelledby="dropdown01">
+                    <a class="dropdown-item" href="{{ site.baseurl }}/jekyll/tutorial/2018/01/12/is-intelligence-enough.html">Left Sidebar</a>
+                    <a class="dropdown-item" href="{{ site.baseurl }}/jekyll/tutorial/2018/01/12/red-riding.html">Right Sidebar</a>
+                    </div>
+                </li>		    
+		    
+		    
                 {% if page.url == "/about.html" %}
                 <li class="nav-item active">
                 {% else %}
