--- a/_includes/nav_old.html
+++ b/_includes/nav_old.html
@@ -26,7 +26,7 @@
                 {% else %}
                 <li class="nav-item">
                 {% endif %}
-                <a class="nav-link" href="{{ site.baseurl }}/index.html">Início</a>
+                <a class="nav-link" href="{{ site.baseurl }}/index.html">Início XXX</a>
                 </li>
 
                 <li class="nav-item dropdown">
