--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,6 +1,27 @@
-<nav id="navbar" class="collapse navbar-collapse">
-    <ul class="nav navbar-nav">
-        {% assign links = site.data.navigation %}
+<!-- Begin Menu Navigation
+================================================== -->
+<nav class="navbar navbar-expand-lg navbar-light bg-white fixed-top mediumnavigation nav-down">
+    
+    <div class="container pr-0">    
+    
+    <!-- Begin Logo -->
+    <a class="navbar-brand" href="{{ site.baseurl }}/">
+    <img src="{{ site.baseurl }}/{{ site.logo }}" alt="{{ site.name }}">
+    </a>
+    <!-- End Logo -->
+  
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarMediumish" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+    </button>
+    
+    
+    <div class="collapse navbar-collapse" id="navbarMediumish">
+       
+        <!-- Begin Menu -->
+        
+            <ul class="navbar-nav ml-auto">
+            
+                        {% assign links = site.data.navigation %}
         {% for link in links %}
             {% assign class = nil %}
             {% if page.url contains link.url %}
@@ -27,5 +48,14 @@
                 </li>
             {% endif %}
         {% endfor %}
-    </ul>
+
+            </ul>		
+  
+        <!-- End Menu -->
+
+    </div>
+        
+    </div>
 </nav>
+<!-- End Navigation
+================================================== -->
