--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -25,7 +25,7 @@
         {% for link in links %}
             {% assign class = nil %}
             {% if page.url contains link.url %}
-                {% assign class = 'active' %}
+                {% assign class = 'nav-link' %}
             {% endif %}
             {% if link.sublinks %}
                 <li class="dropdown {{ class }}">
