--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -31,9 +31,8 @@
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">{{ link.title }}</a> 
                     <div class="dropdown-menu" aria-labelledby="dropdown01">                    
-                    
 <!--                    <a href="{{ site.baseurl }}{{ link.url }}" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">{{ link.title }} <span class="caret"></span></a>-->
-                    <ul class="dropdown-menu">
+<!--                    <ul class="dropdown-menu">-->
                         {% for sublink in link.sublinks %}
                             {% if sublink.title == 'separator' %}
                                 <li role="separator" class="divider"></li>
@@ -43,7 +42,8 @@
                                 </li>
                             {% endif %}
                         {% endfor %}
-                    </ul>
+                   </div>     
+                   <!-- </ul>-->
                 </li>
             {% else %}
                 <li class="{{ class }}">
