--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -27,6 +27,15 @@
             {% if page.url contains link.url %}
                 {% assign class = 'nav-item' %}
             {% endif %}
+                
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Post</a>
+                    <div class="dropdown-menu" aria-labelledby="dropdown01">
+                    <a class="dropdown-item" href="{{ site.baseurl }}/jekyll/tutorial/2018/01/12/is-intelligence-enough.html">Left Sidebar</a>
+                    <a class="dropdown-item" href="{{ site.baseurl }}/jekyll/tutorial/2018/01/12/red-riding.html">Right Sidebar</a>
+                    </div>
+                </li>	
+                
             {% if link.sublinks %}
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">{{ link.title }}</a> 
@@ -35,11 +44,9 @@
 <!--                    <ul class="dropdown-menu">-->
                         {% for sublink in link.sublinks %}
                             {% if sublink.title == 'separator' %}
-                                <li role="separator" class="divider"></li>
+<!--                                <li role="separator" class="divider"></li>-->
                             {% else %}
-                                <li>
                                     <a class="dropdown-item" href="{{ site.baseurl }}{{ sublink.url }}">{{ sublink.title }}</a>
-                                </li>
                             {% endif %}
                         {% endfor %}
                    </div>     
