--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -96,20 +96,9 @@
 </div>
  
 
+{% include before_footer.html %}   	
 
-<!-- Begin Footer
-================================================== -->
-<footer class="footer">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-6 col-sm-6 text-center text-lg-left">
-                 Copyright © {{ site.time | date: "%Y" }} {{ site.name }} 
-            </div>
-        </div>
-    </div>
-</footer>
-<!-- End Footer
-================================================== -->
+{% include footer.html %}   
 
    
 </div> <!-- /.site-content>
