--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -67,7 +67,7 @@
 	</div>
 </div>    
     
-</div><!-- /.container>
+</div><!-- /.container -->
     
 <!-- Categories Jumbotron
 ================================================== -->
