--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,6 +22,8 @@
 <link href="{{ site.baseurl }}/assets/css/screen.css" rel="stylesheet">
     
 <link href="{{ site.baseurl }}/assets/css/main.css" rel="stylesheet">
+	
+{{site.sharethis}}	
     
 </head>
     
