--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -6,9 +6,11 @@
     
     <!-- Begin Logo -->
     <a class="navbar-brand" href="{{ site.baseurl }}/">
-    <img src="{{ site.baseurl }}/{{ site.logo }}" alt="{{ site.name }}">
+    <!-- <img src="{{ site.baseurl }}/{{ site.logo }}" alt="{{ site.name }}">-->
+        <h1 class="sitetitle">{{ site.name }}</h1>
     </a>
     <!-- End Logo -->
+    
   
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarMediumish" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
