--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -7,7 +7,7 @@
     <!-- Begin Logo -->
     <a class="navbar-brand" href="{{ site.baseurl }}/">
     <!-- <img src="{{ site.baseurl }}/{{ site.logo }}" alt="{{ site.name }}">-->
-        <class="sitetitle">{{ site.name }}</h1>
+        {{ site.name }}
     </a>
     <!-- End Logo -->
     
