--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -7,7 +7,7 @@
     <!-- Begin Logo -->
     <a class="navbar-brand" href="{{ site.baseurl }}/">
     <!-- <img src="{{ site.baseurl }}/{{ site.logo }}" alt="{{ site.name }}">-->
-        <h2 class="sitetitle">{{ site.name }}</h2>
+        <div class="mainheading"> <h2 class="sitetitle">{{ site.name }}</h2> </div>
     </a>
     <!-- End Logo -->
     
