--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,18 +8,18 @@ post_class: post-template
 <!-- Begin Article
 ================================================== -->
 <div class="container">
-	<!-- <div class="row"> -->
+	<div class="row">
 
-		<!-- Post Share 
+		<!-- Post Share -->
 		<div class="col-md-2 pl-0">            
            {% include share.html %}  
 		</div>
-		-->
+		
 
 		<!-- Post -->        
         {% assign author = site.authors[page.author] %}
         
-		<!-- <div class="col-md-9 flex-first flex-md-unordered"> -->
+		<div class="col-md-9 flex-first flex-md-unordered">
 			<div class="mainheading">
 
                 <!-- Author Box -->
