--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -11,9 +11,9 @@ post_class: post-template
 	<div class="row">
 
 		<!-- Post Share -->
-		<div class="col-md-2 pl-0">            
-           {% include share.html %}  
-		</div>
+<!--		<div class="col-md-2 pl-0"> -->           
+<!--           {% include share.html %}  -->
+<!--		</div> -->
 		
 
 		<!-- Post -->        
