--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -19,7 +19,7 @@ post_class: post-template
 		<!-- Post -->        
         {% assign author = site.authors[page.author] %}
         
-		<div class="col-md-9 flex-first flex-md-unordered">
+		<div class="row justify-content-center mb-5">
 			<div class="mainheading">
 
                 <!-- Author Box -->
