--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -24,7 +24,7 @@ post_class: post-template
 
                 <!-- Author Box -->
                 {% if page.author %}				
-				<div class="row post-top-meta">
+				<div class="row justify-content-center mb-5">
 					<div class="col-md-2">
 						<img class="author-thumb" src="https://www.gravatar.com/avatar/{{ author.gravatar }}?s=250&d=mm&r=x" alt="{{ author.display_name }}">
 					</div>
