--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -11,20 +11,20 @@ post_class: post-template
 	<div class="row">
 
 		<!-- Post Share -->
-<!--		<div class="col-md-2 pl-0"> -->           
-<!--           {% include share.html %}  -->
-<!--		</div> -->
+		<div class="col-md-2 pl-0">            
+           {% include share.html %}  
+		</div>
 		
 
 		<!-- Post -->        
         {% assign author = site.authors[page.author] %}
         
-		<div class="row justify-content-center mb-5">
+		<div class="col-md-9 flex-first flex-md-unordered">
 			<div class="mainheading">
 
                 <!-- Author Box -->
                 {% if page.author %}				
-				<div class="row justify-content-center mb-5">
+				<div class="row post-top-meta">
 					<div class="col-md-2">
 						<img class="author-thumb" src="https://www.gravatar.com/avatar/{{ author.gravatar }}?s=250&d=mm&r=x" alt="{{ author.display_name }}">
 					</div>
