--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -78,7 +78,7 @@
 {% include footer.html %}   
 
    
-</div> <!-- /.site-content>
+</div> <!-- /.site-content> -->
 
 <!-- Bootstrap core JavaScript
 ================================================== -->
@@ -94,6 +94,6 @@
     
 <script src="{{ site.baseurl }}/assets/js/mediumish.js"></script>
     
-<script id="dsq-count-scr" src="//{{site.disqus}}.disqus.com/count.js"></script>
+<!--<script id="dsq-count-scr" src="//{{site.disqus}}.disqus.com/count.js"></script>-->
 </body>
 </html>
