--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -4,8 +4,8 @@
     
     <div class="container pr-0">    
     
-    <!-- Begin Logo -->
-    <a class="navbar-brand" href="{{ site.baseurl }}/">
+    <!-- Begin Logo navbar-brand-->
+    <a class="mainheading" href="{{ site.baseurl }}/">
     <!-- <img src="{{ site.baseurl }}/{{ site.logo }}" alt="{{ site.name }}">-->
         <h2 class="sitetitle">{{ site.name }}</h2>
     </a>
