--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -4,6 +4,11 @@ Copyright: Sal, WowThemes.net, https://www.wowthemes.net
 Version: 1.0.22 
 License: https://www.wowthemes.net/freebies-license/ 
 */
+
+ h2.sitetitle {
+     font-family:Righteous;
+}
+
  .mainheading {
      padding:1rem 0rem;
 }
