--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -5,7 +5,7 @@ Version: 1.0.22
 License: https://www.wowthemes.net/freebies-license/ 
 */
 
- h2.sitetitle {
+ .mediumnavigation .navbar-brand h2.sitetitle {
      font-family:Righteous;
 }
 
