--- a/_includes/featuredbox.html
+++ b/_includes/featuredbox.html
@@ -7,12 +7,18 @@
                 <div class="h-100">
                     <div class="wrapthumbnail">
                         <a href="{{ post.url | absolute_url }}">
-                            <span class="thumbnail d-block" style="background-image:url({% if post.image contains "://" %}{{ post.image }}{% else %}{{ post.image | absolute_url }}{% endif %});">
-                            </span>
+                            <!--<span class="thumbnail d-block" style="background-image:url({% if post.image contains "://" %}{{ post.image }}{% else %}{{ post.image | absolute_url }}{% endif %});">-->
+                            <!--</span>-->
+            <div class="thumbnail" style="background-image:url({{ site.baseurl }}/{{ post.image }});">
+            </div>                            
                         </a>
                     </div>
                 </div>
             </div>
+            
+
+            
+            
             <div class="col-lg-7 col-md-12">
                 <div class="h-100 card-group">
                     <div class="card">
