--- a/_includes/featuredbox.html
+++ b/_includes/featuredbox.html
@@ -7,8 +7,8 @@
                 <div class="h-100">
                     <div class="wrapthumbnail">
                         <a href="{{ post.url | absolute_url }}">
-                            <span class="thumbnail" style="background-image:url({% if post.image contains "://" %}{{ post.image }}{% else %}{{ post.image | absolute_url }}{% endif %});">
-                            </span>
+                            <div class="thumbnail" style="background-image:url({% if post.image contains "://" %}{{ post.image }}{% else %}{{ post.image | absolute_url }}{% endif %});">
+                            </div>
                         </a>
                     </div>
                 </div>
