--- a/_includes/postbox.html
+++ b/_includes/postbox.html
@@ -1,4 +1,3 @@
-<!-- begin post -->
 {% assign author = site.authors[post.author] %}
 
 <div class="col-lg-4 col-md-6 mb-30px card-group">
@@ -15,11 +14,11 @@
         <div class="card-footer bg-white">
             <div class="wrapfooter">
                 {% if post.author %}
-                <span class="meta-footer-thumb">
+                <!--<span class="meta-footer-thumb">
                 <img class="author-thumb" src="https://www.gravatar.com/avatar/{{ author.gravatar }}?s=250&d=mm&r=x" alt="{{ author.display_name }}">
-                </span>                
+                </span>-->                
                 <span class="author-meta">
-                <span class="post-name"><a target="_blank" href="{{ author.web }}">{{ author.display_name }}</a></span><br/>
+                <span class="post-name"><a target="_blank" href="{{ author.web }}">Por {{ author.display_name }}</a></span><br/>
                 {% endif %}
                 <span class="post-date">{{ post.date | date_to_string }}</span>
                 </span>
@@ -29,4 +28,3 @@
         </div>
     </div>
 </div>
-<!-- end post -->
