--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,7 +9,6 @@ post_class: post-template
 ================================================== -->
 <div class="container">
 	<div class="row">
-
 		<!-- Post Share -->
 		<div class="col-md-2 pl-0">            
            <!--{% include share.html %}  -->
@@ -22,6 +21,15 @@ post_class: post-template
 			<div class="mainheading">
                 <!-- Post Title -->
 				<h1 class="posttitle">{{ page.title }}</h1> 
+            <!-- Post Date -->
+            <p>
+            <small>
+                <span class="post-date"><time class="post-date" datetime="{{ page.date | date:"%Y-%m-%d" }}">{{ page.date | date_to_string }}</time></span>           
+                {% if page.last_modified_at %}
+                (Updated: <time datetime="{{ page.last_modified_at | date_to_xmlschema }}" itemprop="dateModified">{{ page.last_modified_at | date: "%b %-d, %Y" }}</time>)
+                {% endif %}
+                </small>
+            </p>				
 			</div>
 
 			<!-- Post Featured Image -->
@@ -75,5 +83,4 @@ post_class: post-template
 </div>
 <!-- End Article
 ================================================== -->
-
 {% include comments.html %}
