--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -18,8 +18,7 @@ post_class: post-template
             <!-- Post Title -->
             <h1 class="posttitle">{{ page.title }}</h1> 
             <!-- Post Date -->
-            <small>
-               {{ author.display_name }}
+            <small>Por: {{ author.display_name }}
                 <span class="post-date"><time class="post-date" datetime="{{ page.date | date:"%Y-%m-%d" }}">{{ page.date | date_to_string }}</time></span>           
                 {% if page.last_modified_at %}
                 (Updated: <time datetime="{{ page.last_modified_at | date_to_xmlschema }}" itemprop="dateModified">{{ page.last_modified_at | date: "%b %-d, %Y" }}</time>)
