--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -1,9 +1,9 @@
 {% if page.comments != false %}
     <div class="container">
         <div id="comments" class="row justify-content-center mb-5">
-            <div class="col-md-8">              
+            <!--<div class="col-md-8">              -->
                 {% include disqus.html %}                
-            </div>
+            <!--</div>-->
         </div>
     </div>
 {% endif %}
