--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,8 +7,8 @@ post_class: post-template
 <div class="container">
    <div class="row">
       <!-- Post Share -->
-      <div class="col-md-2 pl-0">
-      </div>
+      <!--<div class="col-md-2 pl-0"> -->
+      <!--</div> -->
 		
       <!-- Post -->        
       {% assign author = site.authors[page.author] %}    
