--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -1,9 +1,15 @@
 {% if page.comments != false %}
     <div class="container">
+   <div class="row">
+      <!-- Post Share -->
+      <!--<div class="col-md-2 pl-0"> -->
+      <!--</div> --> 
+      <div id="comments" class="col-md-9 flex-first flex-md-unordered">        
         <!--<div id="comments" class="row justify-content-center mb-5">-->
             <!--<div class="col-md-8">              -->
                 {% include disqus.html %}                
             <!--</div>-->
         <!--</div>-->
     </div>
+    </div>       
 {% endif %}
