--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,6 +5,7 @@
 <meta charset="utf-8">
 <meta http-equiv="Content-Language" content="{{ site.content_lang }}">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<link href="https://plus.google.com/{plusPageUrl}" rel="publisher" />
 <link rel="icon" href="{{ site.baseurl }}/assets/images/logo.png">
 <title>{{ page.title }} | {{site.name}}</title>
 {% if page.description %}<meta name="description" content="{{ page.description }}">{% endif %} 
