--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -2,9 +2,9 @@
     <div class="container">
    <div class="row">
       <!-- Post Share -->
-      <div class="col-md-2 pl-0">
-      </div>
-      <div id="comments" class="col-md-9 flex-first flex-md-unordered">        
+      <!-- <div class="col-md-2 pl-0">-->
+      <!-- </div>-->
+      <div id="comments" class="col-md-10 flex-first flex-md-unordered">        
         <!--<div id="comments" class="row justify-content-center mb-5">-->
             <!--<div class="col-md-8">              -->
                 {% include disqus.html %}                
