--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,12 +7,12 @@ post_class: post-template
 <div class="container">
    <div class="row">
       <!-- Post Share -->
-      <div class="col-md-2 pl-0">
-      </div>
+      <!--<div class="col-md-2 pl-0">-->
+      <!--</div>-->
 		
       <!-- Post -->        
       {% assign author = site.authors[page.author] %}    
-      <div class="col-md-9 flex-first flex-md-unordered">
+      <div class="col-md-10 flex-first flex-md-unordered">
          <div class="mainheading">
             <!-- Post Title -->
             <h1 class="posttitle">{{ page.title }}</h1> 
