--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,19 +33,9 @@
     {{ content }}
 </div>
 
-<!-- Bottom Alert Bar
-================================================== -->
-<div class="alertbar">
-	<div class="container text-center">
-		<span><img src="{{ site.baseurl }}/{{ site.logo }}" alt="{{site.title}}"> &nbsp; Nunca perca um <b>artigo</b> nosso, assine a nossa newsletter</span>
-        <form action="{{site.mailchimp-list}}" method="post" name="mc-embedded-subscribe-form" class="wj-contact-form validate" target="_blank" novalidate>
-            <div class="mc-field-group">
-            <input type="email" placeholder="Email" name="EMAIL" class="required email" id="mce-EMAIL" autocomplete="on" required>
-            <input type="submit" value="Assine" name="subscribe" class="heart">
-            </div>
-        </form>
-	</div>
-</div>    
+{% if site.alertbar == true %}
+   {% include alertbar.html %} 
+{% endif %}     
     
 </div><!-- /.container -->
 
