--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,7 +33,7 @@
     {{ content }}
 </div>
 
-{% if site.alertbar == true %}
+{% if site.enable_alertbar == true %}
    {% include alertbar.html %} 
 {% endif %}     
     
