--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,7 +15,7 @@
 <link href="{{ site.baseurl }}/assets/css/screen.css" rel="stylesheet">  
 <link href="{{ site.baseurl }}/assets/css/main.css" rel="stylesheet">
 	
-<!-- {{site.sharethis}}	-->
+{{site.sharethis}}	
     
 </head>
     
