--- a/_includes/disqus.html
+++ b/_includes/disqus.html
@@ -1,4 +1,5 @@
 <section class="disqus">
+  <div class="disqus-placeholder">Loading comments...</div>   
     <div id="disqus_thread"></div>
     <script type="text/javascript">
         var disqus_shortname = '{{site.disqus}}'; 
