--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,7 +4,8 @@
   <meta http-equiv="Content-Language" content="{{ site.content_lang }}">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   
-  
+  <!--Feed-->
+  <link rel="alternate" type="application/atom+xml" title="{{ site.title | escape }}" href="{{ site.feed.path | default: 'feed.xml' | relative_url }}">  
   
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   
@@ -129,7 +130,7 @@
   {% if site.matomo %}
   {% include matomo.html %}
   {% endif %}
-
+	
 
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 <!-- <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous"> -->
