--- a/_includes/pagination.html
+++ b/_includes/pagination.html
@@ -6,6 +6,7 @@
     <span>&laquo; Anterior</span>
   {% endif %}
 
+ {% comment %} 
   {% for page in (1..paginator.total_pages) %}
     {% if page == paginator.page %}
       <span class="ml-1 mr-1">{{ page }}</span>
@@ -15,6 +16,7 @@
       <a  class="ml-1 mr-1" href="{{ site.paginate_path | prepend: site.baseurl | replace: '//', '/' | replace: ':num', page }}">{{ page }}</a>
     {% endif %}
   {% endfor %}
+{% endcomment %}  
 
   {% if paginator.next_page %}
     <a  class="ml-1 mr-1" href="{{ paginator.next_page_path | prepend: site.baseurl | replace: '//', '/' }}">Próximo &raquo;</a>
