--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -1,4 +1,4 @@
-{% if page.comments != false %}
+{% if page.comments == true %}
    <div class="container">
       <div class="row">
          <!-- Post Share -->
