--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -5,7 +5,7 @@
          <div class="col-md-2 pl-0">
          </div>
          <div id="comments" class="col-md-8 flex-first flex-md-unordered">        
-            {% include disqus.html %}                
+            {% include comments_disqus.html %}                
          </div>
       </div>       
    </div>      
