--- a/_includes/head.html
+++ b/_includes/head.html
@@ -24,8 +24,8 @@
   
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   
-  <link rel="icon" href="{{ site.baseurl }}/assets/images/logo.png">
 
+  {% include meta/icon.html %}  
 
   {% if layout.common-ext-css %}
     {% for css in layout.common-ext-css %}
