--- a/_includes/head.html
+++ b/_includes/head.html
@@ -26,6 +26,8 @@
   
 
   {% include meta/icon.html %}  
+  {% include meta/facebook_opengraph.html %} 
+  {% include meta/twitter.html %}
 
   {% if layout.common-ext-css %}
     {% for css in layout.common-ext-css %}
