--- a/_includes/meta/website_ownership.html
+++ b/_includes/meta/website_ownership.html
@@ -1,7 +1,7 @@
 <!-- Verify website ownership -->
-<meta name="google-site-verification" content="verification_token"><!-- Google Search Console -->
-<meta name="yandex-verification" content="verification_token"><!-- Yandex Webmasters -->
-<meta name="msvalidate.01" content="verification_token"><!-- Bing Webmaster Center -->
-<meta name="alexaVerifyID" content="verification_token"><!-- Alexa Console -->
-<meta name="p:domain_verify" content="code_from_pinterest"><!-- Pinterest Console-->
-<meta name="norton-safeweb-site-verification" content="norton_code"><!-- Norton Safe Web -->
+<meta name="google-site-verification" content="{{ site.google_verify }}"><!-- Google Search Console -->
+<meta name="yandex-verification" content="{{ site.yandex_verify }}"><!-- Yandex Webmasters -->
+<meta name="msvalidate.01" content="{{ site.bing_verify }}"><!-- Bing Webmaster Center -->
+<meta name="alexaVerifyID" content="{{ site.alexa_verify }}"><!-- Alexa Console -->
+<meta name="p:domain_verify" content="{{ site.pinterest_verify }}"><!-- Pinterest Console-->
+<meta name="norton-safeweb-site-verification" content="{{ site.norton_verify }}"><!-- Norton Safe Web -->
