--- a/_includes/meta/facebook_opengraph.html
+++ b/_includes/meta/facebook_opengraph.html
@@ -42,6 +42,6 @@
 {% if page.facebook_image %}
    <meta property="og:image" content="{{ page.facebook_image }}" />
 {% else %}
-   <meta property="og:image" content="{{ page.image }}" />
+   <meta property="og:image2" content="{{ page.image }}" />
 {% endif %}
 
