--- a/_includes/meta/twitter.html
+++ b/_includes/meta/twitter.html
@@ -11,7 +11,7 @@
 {% if page.title %}
   <meta name="twitter:title" content="{{ page.title }}" />
 {% else %}
-  <meta name="twitter:title" content="{{ site.name }}" />
+  <meta name="twitter:title" content="{{ site.title }}" />
 {% endif %}
 
 {% if page.meta_description %}
