--- a/_includes/footer_big.html
+++ b/_includes/footer_big.html
@@ -37,7 +37,7 @@
             </div>
             <div class="copyright">
                 <p class="pull-left">
-                Copyright © {{ site.time | date: "%Y" }} {{ site.name }}.
+                Copyright © {{ site.time | date: "%Y" }} {{ site.title }}.
                 </p>
                 <div class="clearfix"></div>
             </div>
