--- a/_includes/head.html
+++ b/_includes/head.html
@@ -23,6 +23,9 @@
 
   
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
+
+  <!--Manifest used for enabling PWA-->
+  <link rel="manifest" href="manifest.json">
   
 
   {% include meta/icon.html %}  
