--- a/_includes/head.html
+++ b/_includes/head.html
@@ -26,7 +26,7 @@
 
   <!--Manifest used for enabling PWA-->
   <link rel="manifest" href="manifest.json">
-  
+  <meta name="theme-color" content="{{ site.manifest_theme_color | default: 'white' }}"/>  
 
   {% include meta/icon.html %}  
   {% include meta/facebook_opengraph.html %} 
