--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,6 +10,8 @@
   <!--Feed-->
   {% feed_meta %}
 
+ {% include meta/website_ownership.html %} 
+
   <!--Google Analytics-->
   {% include analytics.html %}  
 
