--- a/_includes/head.html
+++ b/_includes/head.html
@@ -30,7 +30,7 @@
   <link rel="manifest" href="manifest.json">
   <meta name="theme-color" content="{{ site.manifest_theme_color | default: 'white' }}"/>  
 
-  {% include meta/icon.html %}  
+  {% include meta/favicon.html %}  
   {% include meta/facebook_opengraph.html %} 
   {% include meta/twitter.html %}
 
