--- a/_includes/meta/favicon.html
+++ b/_includes/meta/favicon.html
@@ -1,12 +1,14 @@
-<link rel="apple-touch-icon" sizes="180x180" href="/assets/images/favicon/apple-touch-icon.png?v=1">
-<link rel="icon" type="image/png" sizes="32x32" href="/assets/images/favicon/favicon-32x32.png?v=1">
-<link rel="icon" type="image/png" sizes="16x16" href="/assets/images/favicon/favicon-16x16.png?v=1">
-<link rel="manifest" href="/assets/images/favicon/site.webmanifest?v=1">
-<link rel="mask-icon" href="/assets/images/favicon/safari-pinned-tab.svg?v=1" color="#bb4444">
-<link rel="shortcut icon" href="/assets/images/favicon/favicon.ico?v=1">
+<link rel="apple-touch-icon" sizes="180x180" href="/assets/images/favicon/apple-touch-icon.png?v=2">
+<link rel="icon" type="image/png" sizes="32x32" href="/assets/images/favicon/favicon-32x32.png?v=2">
+<link rel="icon" type="image/png" sizes="194x194" href="/assets/images/favicon/favicon-194x194.png?v=2">
+<link rel="icon" type="image/png" sizes="192x192" href="/assets/images/favicon/android-chrome-192x192.png?v=2">
+<link rel="icon" type="image/png" sizes="16x16" href="/assets/images/favicon/favicon-16x16.png?v=2">
+<link rel="manifest" href="/assets/images/favicon/site.webmanifest?v=2">
+<link rel="mask-icon" href="/assets/images/favicon/safari-pinned-tab.svg?v=2" color="#bb4444">
+<link rel="shortcut icon" href="/assets/images/favicon/favicon.ico?v=2">
 <meta name="apple-mobile-web-app-title" content="Trolol&oacute; de Mulher">
 <meta name="application-name" content="Trolol&oacute; de Mulher">
-<meta name="msapplication-TileColor" content="#b91d47">
-<meta name="msapplication-TileImage" content="/assets/images/favicon/mstile-144x144.png?v=1">
-<meta name="msapplication-config" content="/assets/images/favicon/browserconfig.xml?v=1">
+<meta name="msapplication-TileColor" content="#da532c">
+<meta name="msapplication-TileImage" content="/assets/images/favicon/mstile-144x144.png?v=2">
+<meta name="msapplication-config" content="/assets/images/favicon/browserconfig.xml?v=2">
 <meta name="theme-color" content="#ffffff">
