--- a/_includes/meta/social/google_author.html
+++ b/_includes/meta/social/google_author.html
@@ -1,3 +1,24 @@
+<!--Google Author -->
   <meta name="author" content="{{ site.authors[page.author].display_name }}" />
   <link href="https://plus.google.com/{{site.google.googleplus_code}}" rel="publisher" />
   <link href="https://plus.google.com/{{site.authors[page.author].googleplus_code}}" rel="author" />
+
+<script type="application/ld+json">
+{
+  "@context": "http://schema.org",
+  "@type": "Person",
+  "name": "Lidiane Vasconcelos",
+  "url": "http://www.trololodemulher.com.br",
+  "sameAs": [
+    "http://www.facebook.com/your-profile",
+    "http://instagram.com/yourProfile",
+    "http://www.linkedin.com/in/yourprofile",
+    "http://plus.google.com/your_profile"
+  ]
+}
+</script>
+
+
+<!-- Google Card -->
+<meta itemprop="description" content="{{ card.description }}" />
+<meta itemprop="image" content="{{ card.image }}" />
